Cherry-pick 276282@main (2922af379dc7). https://bugs.webkit.org/show_bug.cgi?id=271108

REGRESSION(274077@main): failure to build on i586 (and likely other 32bit arches): static assertion failed: Timer should stay small
    https://bugs.webkit.org/show_bug.cgi?id=271108

    Unreviewed build fix. This changes SameSizeOfTimer to ensure it matches
    the size of Timer on 32-bit platforms.

    * Source/WebCore/platform/Timer.cpp:

    Canonical link: https://commits.webkit.org/276282@main